[project]
name = "ComfyUI-NTX-support-nodes"
description = "Utility nodes to support the creation of pipes"
version = "1.1.4"
license = { file = "LICENSE.txt" }
dependencies  = []

[project.urls]
Repository = "https://github.com/nekotxt/ComfyUI-NTX-support-nodes.git"

[tool.comfy]
PublisherId = "nekotxt"
DisplayName = "ComfyUI-NTX-support-nodes"
Icon = "https://github.com/nekotxt/ComfyUI-NTX-support-nodes/blob/main/images/lamp.png?raw=true"
